fixed tooltip alignment and forced list items to not have styles

--- a/dev/scss/base/_menu.scss
+++ b/dev/scss/base/_menu.scss
@@ -3,5 +3,10 @@
   ul {
     list-style: none;
     margin: 0;
+
+    li {
+      list-style: none;
+      list-style-image: none;
+    }
   }
 }
